# ChangeLog for app-misc/cldx-meta
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  cldx-meta-10.0.ebuild:
  Add app-editors/mousepad.

  30 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  cldx-meta-10.0.ebuild:
  Added x11-terms/terminal.

  23 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cldx-meta-10.0.ebuild,+metadata.xml:
  Meta package for CLDX.