@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/cldx-meta
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  28 Mar 2010; Трацевский Александр <alex@gentoo.org>
+  cldx-meta-10.0.ebuild, cldx-meta-10.0.1.ebuild, cldx-meta-10.2-r1.ebuild,
+  cldx-meta-10.3.91.ebuild:
+  Corrected package name xfce-extra/xfce4-notifyd.
 
   02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
   cldx-meta-10.0.ebuild:
